# python-config-probe

./: .gitignore  .travis.yml  README.md  setup.cfg  tox.ini
config_probe/: __init__.py  exceptions.py  key_not_found_within_config_probe_patterns.py  munch_wrapper.py
tests/: test_config_probe.py
tests/dict-merge/: file1.yaml  file2.yaml
tests/key-override/: file1.yaml  file2.yaml
tests/multi-level-files/ns1/: stuff.yaml
tests/multi-level-files/ns1/subdir/: stuff.yaml
tests/single-file/: stuff.yaml
tests/single-file-with-namespace/: stuff.json
tests/two-files-with-subdir-namespace/ns1/: stuff.yaml
tests/two-files-with-subdir-namespace/ns2/: stuff.yaml
