[metadata]
name = config-probe
url = https://github.com/internap/python-config-probe
author = Internap Hosting
author-email = opensource@internap.com
summary = Auto-discovery of configurations for easy inline use
description-file =
    README.md
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4

[files]
packages =
    config_probe

[bdist_wheel]
universal = 1

[nosetests]
no-path-adjustment = 1
logging-level = DEBUG
